fighting with python extension

--- a/Information_Retrieval.ipynb
+++ b/Information_Retrieval.ipynb
@@ -6,7 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "#somehow stolen from:\n",
+    "#https://www.geeksforgeeks.org/multidimensional-data-analysis-in-python/\n",
+    "import json\n",
+    "import re, numpy as np, pandas as pd\n",
+    "from pprint import pprint\n",
+    "\n",
+    "import gensim, spacy, logging, warnings\n",
+    "import gensim.corpora as corpora\n",
+    "from gensim.utils import lemmatize, simple_preprocess\n",
+    "from gensim.models import CoherenceModel\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from nltk.corpus import stopwords"
    ]
   },
   {
@@ -53,7 +65,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "stop_words = stopwords.words('english')\n",
+    "stop_words.extend(['from', 'subject', 're', 'edu', 'use', 'not', 'would', 'say', 'could', '_', 'be', 'know', 'good', 'go', 'get', 'do', 'done', 'try', 'many', 'some', 'nice', 'thank', 'think', 'see', 'rather', 'easy', 'easily', 'lot', 'lack', 'make', 'want', 'seem', 'run', 'need', 'even', 'right', 'line', 'even', 'also', 'may', 'take', 'come'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_json('https://raw.githubusercontent.com/selva86/datasets/master/newsgroups.json')\n",
+    "print(df)\n",
+    "df = df.loc[df.target_names.isin(['soc.religion.christian', 'rec.sport.hockey', 'talk.politics.mideast', 'rec.motorcycles']) , :]\n",
+    "print(df.shape)  #> (2361, 3)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
